--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,8 +19,7 @@
         </div>
       </div>
     </div>
-    <div class="child-2"></div>
-    <div class="child-3"></div>
+    <div class="vr"></div>
     <div class="child-4">
       <div class="main-content">
         <div style="display: flex; justify-content: space-between;">
